# calc-programing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Calc.cpp  Calc.h  MemLeakChecker.c  MemLeakChecker.h  Writer.c  Writer.h  a(x).txt  a.txt  args.c  args.h  calc.hpp  calc.l  calc.y  calc.y.old  create.cpp  default_function.cpp  default_function.h  eval.cpp  exmath.c  exmath.h  func.txt  function.cpp  function.h  lexer.cpp  makefile  memory.c  memory.h  numberBase.c  numberBase.h  parser.cpp  parser.hpp  print.c  print.h  result004.txt  result007.txt  result008.txt  sum.c  sum.h  variable.c  variable.h
